Bug 1304098 - Scale vector images appropriately in PuppetWidget before sending them to the parent process. r=mstange

This builds on the image-set work to trivially implement this.

Differential Revision: https://phabricator.services.mozilla.com/D112671